--- a/index.html
+++ b/index.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Научиться учиться</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Научиться учиться</title>
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body>
-  <div class="page">
-    <header class="header">
+    <div class="page">
+        <header class="header">
+            <div class="logo logo_place_header">
+                <a href="#">
+                    <img src="./images/logo_place_header.svg" alt="Логотип">
+                </a>
+            </div>
+            <div class="header__title">
+                <p>Научиться учиться</p>
+            </div>
+            <div class="header__subtitle">
+                <p>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?</p>
+            </div>
+            <div class="header__link">
+                <a href="">
 
-    </header>
-    <main class="content">
-      <section class="description">
-      </section>
+                </a>
+            </div>
+            <div class="header__main-illustration">
+                <img src="./images/header-image.png" alt="Главная иллюстрация" width="765" height="608">
+            </div>
+            <div class="header__square-pic">
 
-      <section class="digits">
-      </section>
+            </div>
+        </header>
 
-      <section class="feynman">
-      </section>
+        <main class="content">
+            <section class="description">
+            </section>
 
-      <section class="kaufman">
-      </section>
-    </main>
-    <footer class="footer">
+            <section class="digits">
+            </section>
 
-    </footer>
-  </div>
+            <section class="feynman">
+            </section>
+
+            <section class="kaufman">
+            </section>
+        </main>
+
+        <footer class="footer">
+
+        </footer>
+    </div>
 </body>
+
 </html>
