start section description

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div class="page">
+<!------------------------Шапка сайта--------------------------->
         <header class="header">
             <div class="logo logo_place_header">
                 <a href="#">
@@ -31,21 +32,26 @@
 
             </div>
         </header>
-
+<!---------------Главные проблемы в обучении--------------------->
         <main class="content">
             <section class="description">
-            </section>
 
+                <div class="two-columns">
+
+                </div>
+                
+            </section>
+<!-------------------------Цифры и факты------------------------->
             <section class="digits">
             </section>
-
+<!------------------------Метод Фейнмана------------------------->
             <section class="feynman">
             </section>
-
+<!---------------------Принципы обучения------------------------->
             <section class="kaufman">
             </section>
         </main>
-
+<!-------------------------Подвал-------------------------------->
         <footer class="footer">
 
         </footer>
