--- a/index.html
+++ b/index.html
@@ -35,11 +35,18 @@
 <!---------------Главные проблемы в обучении--------------------->
         <main class="content">
             <section class="description">
-
                 <div class="two-columns">
-
+                    <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+                <div class="two-columns__main-text">
+                    <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
+                    </p>
+                    <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+                    </p>
+                    <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+                    </p>
                 </div>
-                
+                </div>
+
             </section>
 <!-------------------------Цифры и факты------------------------->
             <section class="digits">
