final block feynman

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             
             <h1 class="header__title">Научиться учиться</h1>
             
-            <h2 class="header__subtitle">Какие современные и эффективные подходы <br> к обучению вы можете использовать в своей <br> жизни? <a href="" class="header__link">Узнать&xrarr;</a></h2>
+            <h2 class="header__subtitle">Какие современные и эффективные подходы <br> к обучению вы можете использовать в своей <br> жизни? <a href="" class="header__link">Узнать &xrarr;</a></h2>
 
             <div>
                 <img class="header__main-illustration" src="./images/header-image.png" alt="Главная иллюстрация" >
@@ -91,6 +91,12 @@
             </section>
 <!------------------------Метод Фейнмана------------------------->
             <section class="feynman">
+                <h2 class="feynman__title" align="center">Метод Фейнмана</h2>
+                    <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+                    <a href="" class="feynman__link">Подробнее &xrarr;</a>
+                    <div>
+                        <img class="feynman__illustration" src="./images/feynman.png" alt="Фейнман" >
+                    </div>
             </section>
 <!---------------------Принципы обучения------------------------->
             <section class="kaufman">
