final block kaufman

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="page">
 <!------------------------Шапка сайта--------------------------->
-        <header class="header">
+        <header class="header background-white">
             <div class="logo logo_place_header">
                 <a href="#">
                     <img src="./images/logo_place_header.svg" alt="Логотип">
@@ -32,8 +32,9 @@
 
             </div>
         </header>
-<!---------------Главные проблемы в обучении--------------------->
+
         <main class="content">
+<!---------------Главные проблемы в обучении--------------------->
             <section class="description">
                 <div class="two-columns">
                     <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
@@ -90,7 +91,7 @@
                 </div>
             </section>
 <!------------------------Метод Фейнмана------------------------->
-            <section class="feynman">
+            <section class="feynman background-white">
                 <h2 class="feynman__title" align="center">Метод Фейнмана</h2>
                     <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
                     <a href="" class="feynman__link">Подробнее &xrarr;</a>
@@ -99,11 +100,61 @@
                     </div>
             </section>
 <!---------------------Принципы обучения------------------------->
-            <section class="kaufman">
+            <section class="kaufman background-dark">
+                <div class="table_theme_dark">
+                    <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+                    <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+                <div class="table">
+                    <div class="table__cell_theme_dark">
+                        <h4 class="table__heading">1</h4>
+                        <p class="table__text">Выберите привлекательный проект.</p>
+                    </div>
+                    <div class="table__cell_theme_dark">
+                        <h4 class="table__heading">2</h4>
+                        <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
+                    </div>
+                    <div class="table__cell_theme_dark">
+                        <h4 class="table__heading">3</h4>
+                        <p class="table__text">Определите целевой уровень мастерства.</p>
+                    </div>
+                    <div class="table__cell_theme_dark">
+                        <h4 class="table__heading">4</h4>
+                        <p class="table__text">Разбейте навык на элементы.</p>
+                    </div>
+                    <div class="table__cell_theme_dark">
+                        <h4 class="table__heading">5</h4>
+                        <p class="table__text">Приготовьте всё необходимое для занятий.</p>
+                    </div>
+                    <div class="table__cell_theme_dark">
+                        <h4 class="table__heading">6</h4>
+                        <p class="table__text">Устраните препятствия для занятий.</p>
+                    </div>
+                    <div class="table__cell_theme_dark">
+                        <h4 class="table__heading">7</h4>
+                        <p class="table__text">Выделите специальное время для занятий.</p>
+                    </div>
+                    <div class="table__cell_theme_dark">
+                        <h4 class="table__heading">8</h4>
+                        <p class="table__text">Создайте быстрые петли обратной связи.</p>
+                    </div>
+                    <div class="table__cell_theme_dark">
+                        <h4 class="table__heading">9</h4>
+                        <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+                    </div>
+                    <div class="table__cell_theme_dark">
+                        <h4 class="table__heading">10</h4>
+                        <p class="table__text">Уделяйте внимание количеству и скорости.</p>
+                    </div>
+                </div>
+                </div>
+                <div>
+                    <img class="kaufman-triangle" src="./images/kaufman-triangle.svg" alt="Треугольник">
+                </div>
+                
             </section>
         </main>
 <!-------------------------Подвал-------------------------------->
-        <footer class="footer">
+        <footer class="footer background-dark">
 
         </footer>
     </div>
