--- a/index.html
+++ b/index.html
@@ -155,7 +155,18 @@
         </main>
 <!-------------------------Подвал-------------------------------->
         <footer class="footer background-dark">
+            <div class="footer__columns">
+                <div class="footer__columns_content_copyright">
+                    <img class="logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип в подвале">
+                    <p class="footer__author">&copy;2021.Игорь Теплостанский</p>
+                </div>
+                <div class="footer__columns_content_info">
 
+                </div>
+                <div class="footer__columns_content_social">
+
+                </div>
+            </div>
         </footer>
     </div>
 </body>
