--- a/index.html
+++ b/index.html
@@ -160,11 +160,40 @@
                     <img class="logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип в подвале">
                     <p class="footer__author">&copy;2021.Игорь Теплостанский</p>
                 </div>
-                <div class="footer__columns_content_info">
 
+                <div class="footer__columns_content_info">
+                    <h5 class="footer__column-heading">О Практикуме</h5>
+                        <ul class="footer__column-links">
+                            <li>
+                                <a class="footer__column-link" href="#">Главная</a>
+                            </li>
+                            <li>
+                                <a class="footer__column-link" href="#">Концепция</a>
+                            </li>
+                            <li>
+                                <a class="footer__column-link" href="#">Наставники</a>
+                            </li>
+                        </ul>
                 </div>
                 <div class="footer__columns_content_social">
-
+                    <h5 class="footer__column-heading">Соцсети</h5>
+                    <ul class="footer__column-links">
+                            <li">
+                                <a class="footer__column-link" href="https://facebook.com" target="_blank">
+                                    <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Icon Facebook">Facebook
+                                </a>
+                            </li>
+                            <li>
+                                <a class="footer__column-link" href="https://vk.com" target="_blank">
+                                    <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Icon VK">Вконтакте
+                                </a>
+                            </li>
+                            <li>
+                                <a class="footer__column-link" href="https://instagram.com" target="_blank">
+                                    <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Icon Instagram">Instagram
+                                </a>
+                            </li>
+                        </ul>
                 </div>
             </div>
         </footer>
