--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="page">
-<!------------------------Шапка сайта--------------------------->
+<!---Шапка сайта-->
         <header class="header background-white">
             <div class="logo logo_place_header">
                 <a href="#">
@@ -34,7 +34,7 @@
         </header>
 
         <main class="content">
-<!---------------Главные проблемы в обучении--------------------->
+<!--Главные проблемы в обучении-->
             <section class="description">
                 <div class="two-columns">
                     <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
@@ -49,7 +49,7 @@
                 </div>
 
             </section>
-<!-------------------------Цифры и факты------------------------->
+<!--Цифры и факты-->
             <section class="digits">
                 <h2 class="section-title">Цифры и факты</h2>
                     <h3 class="section-subtitle">Про учёбу и мозг</h3>
@@ -90,16 +90,16 @@
                     </div>
                 </div>
             </section>
-<!------------------------Метод Фейнмана------------------------->
+<!--Метод Фейнмана-->
             <section class="feynman background-white">
-                <h2 class="feynman__title" align="center">Метод Фейнмана</h2>
+                <h2 class="feynman__title">Метод Фейнмана</h2>
                     <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
                     <a href="" class="feynman__link">Подробнее &xrarr;</a>
                     <div>
                         <img class="feynman__illustration" src="./images/feynman.png" alt="Фейнман" >
                     </div>
             </section>
-<!---------------------Принципы обучения------------------------->
+<!--Принципы обучения-->
             <section class="kaufman background-dark">
                 <div class="table_theme_dark">
                     <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
@@ -153,7 +153,7 @@
                 
             </section>
         </main>
-<!-------------------------Подвал-------------------------------->
+<!--Подвал-->
         <footer class="footer background-dark">
             <div class="footer__columns">
                 <div class="footer__columns_content_copyright">
@@ -178,22 +178,22 @@
                 <div class="footer__columns_content_social">
                     <h5 class="footer__column-heading">Соцсети</h5>
                     <ul class="footer__column-links">
-                            <li">
-                                <a class="footer__column-link" href="https://facebook.com" target="_blank">
-                                    <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Icon Facebook">Facebook
-                                </a>
-                            </li>
-                            <li>
-                                <a class="footer__column-link" href="https://vk.com" target="_blank">
-                                    <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Icon VK">Вконтакте
-                                </a>
-                            </li>
-                            <li>
-                                <a class="footer__column-link" href="https://instagram.com" target="_blank">
-                                    <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Icon Instagram">Instagram
-                                </a>
-                            </li>
-                        </ul>
+                        <li">
+                            <a class="footer__column-link" href="https://facebook.com" target="_blank">
+                                <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Icon Facebook">Facebook
+                            </a>
+                        </li>
+                        <li>
+                            <a class="footer__column-link" href="https://vk.com" target="_blank">
+                                <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Icon VK">Вконтакте
+                            </a>
+                        </li>
+                        <li>
+                            <a class="footer__column-link" href="https://instagram.com" target="_blank">
+                                <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Icon Instagram">Instagram
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </footer>
