--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="page">
-<!---Шапка сайта-->
+<!--Шапка сайта-->
         <header class="header background-white">
             <div class="logo logo_place_header">
                 <a href="#">
