--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="page">
 <!--Шапка сайта-->
-        <header class="header background-white">
+        <header class="header">
             <a class="logo_place_header" href="#">
                 <img src="./images/logo_place_header.svg" alt="Логотип">
             </a>
@@ -85,18 +85,17 @@
                 </div>
             </section>
 <!--Метод Фейнмана-->
-            <section class="feynman background-white">
+            <section class="feynman">
                 <h2 class="feynman__title">Метод Фейнмана</h2>
                     <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
                     <a href="" class="feynman__link">Подробнее &xrarr;</a>
 
             </section>
 <!--Принципы обучения-->
-            <section class="kaufman background-dark">
-                <div class="table_theme_dark">
+            <section class="kaufman">
                     <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
                     <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
-                <div class="table">
+                <div class="table table_theme_dark">
                     <div class="table__cell_theme_dark">
                         <h4 class="table__heading">1</h4>
                         <p class="table__text">Выберите привлекательный проект.</p>
@@ -138,13 +137,12 @@
                         <p class="table__text">Уделяйте внимание количеству и скорости.</p>
                     </div>
                 </div>
-                </div>
                 <div class="kaufman-triangle"></div>
                 
             </section>
         </main>
 <!--Подвал-->
-        <footer class="footer background-dark">
+        <footer class="footer">
             <div class="footer__columns">
                 <div class="footer__columns_content_copyright">
                     <img class="logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип в подвале">
