--- a/index.html
+++ b/index.html
@@ -137,19 +137,19 @@
                         <p class="table__text">Уделяйте внимание количеству и скорости.</p>
                     </div>
                 </div>
-                <div class="kaufman-triangle"></div>
+                <div class="kaufman__triangle"></div>
                 
             </section>
         </main>
 <!--Подвал-->
         <footer class="footer">
             <div class="footer__columns">
-                <div class="footer__columns_content_copyright">
+                <div class="footer__column_content_copyright">
                     <img class="logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип в подвале">
                     <p class="footer__author">&copy;2021.Игорь Теплостанский</p>
                 </div>
 
-                <div class="footer__columns_content_info">
+                <div class="footer__column_content_info">
                     <h5 class="footer__column-heading">О Практикуме</h5>
                         <ul class="footer__column-links">
                             <li>
@@ -163,7 +163,7 @@
                             </li>
                         </ul>
                 </div>
-                <div class="footer__columns_content_social">
+                <div class="footer__column_content_social">
                     <h5 class="footer__column-heading">Соцсети</h5>
                     <ul class="footer__column-links">
                         <li>
