--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <footer class="footer">
             <div class="footer__columns">
                 <div class="footer__column_content_copyright">
-                    <img class="logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип в подвале">
+                    <img class="footer__logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип в подвале">
                     <p class="footer__author">&copy;2021.Игорь Теплостанский</p>
                 </div>
 
@@ -168,17 +168,17 @@
                     <ul class="footer__column-links">
                         <li>
                             <a class="footer__column-link" href="https://facebook.com" target="_blank">
-                                <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Icon Facebook">Facebook
+                                <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Иконка Facebook">Facebook
                             </a>
                         </li>
                         <li>
                             <a class="footer__column-link" href="https://vk.com" target="_blank">
-                                <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Icon VK">Вконтакте
+                                <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Иконка Вконтакте">Вконтакте
                             </a>
                         </li>
                         <li>
                             <a class="footer__column-link" href="https://instagram.com" target="_blank">
-                                <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Icon Instagram">Instagram
+                                <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Иконка Instagram">Instagram
                             </a>
                         </li>
                     </ul>
