full fix critical errors html

--- a/index.html
+++ b/index.html
@@ -96,43 +96,43 @@
                     <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
                     <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
                 <div class="table table_theme_dark">
-                    <div class="table__cell_theme_dark">
+                    <div class="table__cell table__cell_theme_dark">
                         <h4 class="table__heading">1</h4>
                         <p class="table__text">Выберите привлекательный проект.</p>
                     </div>
-                    <div class="table__cell_theme_dark">
+                    <div class="table__cell table__cell_theme_dark">
                         <h4 class="table__heading">2</h4>
                         <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
                     </div>
-                    <div class="table__cell_theme_dark">
+                    <div class="table__cell table__cell_theme_dark">
                         <h4 class="table__heading">3</h4>
                         <p class="table__text">Определите целевой уровень мастерства.</p>
                     </div>
-                    <div class="table__cell_theme_dark">
+                    <div class="table__cell table__cell_theme_dark">
                         <h4 class="table__heading">4</h4>
                         <p class="table__text">Разбейте навык на элементы.</p>
                     </div>
-                    <div class="table__cell_theme_dark">
+                    <div class="table__cell table__cell_theme_dark">
                         <h4 class="table__heading">5</h4>
                         <p class="table__text">Приготовьте всё необходимое для занятий.</p>
                     </div>
-                    <div class="table__cell_theme_dark">
+                    <div class="table__cell table__cell_theme_dark">
                         <h4 class="table__heading">6</h4>
                         <p class="table__text">Устраните препятствия для занятий.</p>
                     </div>
-                    <div class="table__cell_theme_dark">
+                    <div class="table__cell table__cell_theme_dark">
                         <h4 class="table__heading">7</h4>
                         <p class="table__text">Выделите специальное время для занятий.</p>
                     </div>
-                    <div class="table__cell_theme_dark">
+                    <div class="table__cell table__cell_theme_dark">
                         <h4 class="table__heading">8</h4>
                         <p class="table__text">Создайте быстрые петли обратной связи.</p>
                     </div>
-                    <div class="table__cell_theme_dark">
+                    <div class="table__cell table__cell_theme_dark">
                         <h4 class="table__heading">9</h4>
                         <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
                     </div>
-                    <div class="table__cell_theme_dark">
+                    <div class="table__cell table__cell_theme_dark">
                         <h4 class="table__heading">10</h4>
                         <p class="table__text">Уделяйте внимание количеству и скорости.</p>
                     </div>
@@ -144,12 +144,12 @@
 <!--Подвал-->
         <footer class="footer">
             <div class="footer__columns">
-                <div class="footer__column_content_copyright">
+                <div class=" footer__column footer__column_content_copyright">
                     <img class="footer__logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип в подвале">
                     <p class="footer__author">&copy;2021.Игорь Теплостанский</p>
                 </div>
 
-                <div class="footer__column_content_info">
+                <div class="footer__column footer__column_content_info">
                     <h5 class="footer__column-heading">О Практикуме</h5>
                         <ul class="footer__column-links">
                             <li>
@@ -163,7 +163,7 @@
                             </li>
                         </ul>
                 </div>
-                <div class="footer__column_content_social">
+                <div class="footer__column footer__column_content_social">
                     <h5 class="footer__column-heading">Соцсети</h5>
                     <ul class="footer__column-links">
                         <li>
