--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="page">
 <!--Шапка сайта-->
         <header class="header">
-            <a class="logo_place_header" href="#">
+            <a class="logo logo_place_header" href="#">
                 <img src="./images/logo_place_header.svg" alt="Логотип">
             </a>
 
@@ -145,24 +145,24 @@
         <footer class="footer">
             <div class="footer__columns">
                 <div class=" footer__column footer__column_content_copyright">
-                    <img class="footer__logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип в подвале">
+                    <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип в подвале">
                     <p class="footer__author">&copy;2021.Игорь Теплостанский</p>
                 </div>
 
-                <div class="footer__column footer__column_content_info">
+                <nav class="footer__column footer__column_content_info">
                     <h5 class="footer__column-heading">О Практикуме</h5>
-                        <ul class="footer__column-links">
-                            <li>
-                                <a class="footer__column-link" href="#">Главная</a>
-                            </li>
-                            <li>
-                                <a class="footer__column-link" href="#">Концепция</a>
-                            </li>
-                            <li>
-                                <a class="footer__column-link" href="#">Наставники</a>
-                            </li>
-                        </ul>
-                </div>
+                    <ul class="footer__column-links">
+                        <li>
+                            <a class="footer__column-link" href="#">Главная</a>
+                        </li>
+                        <li>
+                            <a class="footer__column-link" href="#">Концепция</a>
+                        </li>
+                        <li>
+                            <a class="footer__column-link" href="#">Наставники</a>
+                        </li>
+                    </ul>
+                </nav>
                 <div class="footer__column footer__column_content_social">
                     <h5 class="footer__column-heading">Соцсети</h5>
                     <ul class="footer__column-links">
