--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 
             <div class="header__main-illustration"></div>
             
-
             <div class="header__square-pic">
 
             </div>
@@ -56,7 +55,8 @@
                     </div>
                     <div class="table__cell">
                         <h4 class="table__heading">2.1 миллиарда</h4>
-                        <p class="table__text">Число нуждающихся в повышении квалификации</p><p class="table__text">Всемирный Банк, 2017</p>
+                        <p class="table__text">Число нуждающихся в повышении квалификации</p>
+                        <p class="table__text">Всемирный Банк, 2017</p>
                     </div>
                     <div class="table__cell">
                         <h4 class="table__heading">1000 терабайт</h4>
@@ -68,7 +68,8 @@
                     </div>
                     <div class="table__cell">
                         <h4 class="table__heading">420 миллионов</h4>
-                        <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p><p class="table__text">Всемирный Банк, 2017</p>
+                        <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+                        <p class="table__text">Всемирный Банк, 2017</p>
                     </div>
                     <div class="table__cell">
                         <h4 class="table__heading">17–20 лет</h4>
