блок video готов

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
 				<div class="video__iframes">
 					<div class="video__iframe">
-						<iframe src="https://www.youtube.com/watch?v=arj7oStGLkU" frameborder="0"></iframe>
+						<iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<div class="video__iframe">
-						<iframe src="https://www.youtube.com/watch?v=5MgBikgcWnY" frameborder="0"></iframe>
+						<iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</div>
 			</section>
@@ -65,6 +65,13 @@
             <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
           </div>
         </article>
+      </section>
+
+			<!--Метод Фейнмана-->
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <a href="" class="feynman__link">Подробнее &xrarr;</a>
       </section>
 
 			<!--Цифры и факты-->
@@ -107,13 +114,6 @@
             <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
-      </section>
-
-			<!--Метод Фейнмана-->
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-        <a href="" class="feynman__link">Подробнее &xrarr;</a>
       </section>
 
 			<!--Принципы обучения-->
