--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <div class="header__main-illustration"></div>
 
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
 
     <main class="content">
@@ -162,7 +162,7 @@
             <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
 
       </section>
 		</main>
