блок Ресурсы готов

--- a/index.html
+++ b/index.html
@@ -165,6 +165,18 @@
         <div class="kaufman__triangle rotation"></div>
 
       </section>
+
+			<!--Ресурсы-->
+			<section class="resources">
+				<h2 class="section-title">Полезные ресурсы</h2>
+				<h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+				<div class="resources__logo-zone">
+					<img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Арзамас">
+					<img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Н+1">
+					<img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Стрелка">
+					<img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Полка">
+				</div>
+			</section>
 		</main>
 
     <!--footer-->
