--- a/index.html
+++ b/index.html
@@ -15,15 +15,11 @@
 		<!--Шапка сайта-->
     <header class="header">
       <a class="logo logo_place_header" href="#">
-        <img src="./images/logo_place_header.svg" alt="Логотип">
+        <img src="./images/logo_place_header.svg" alt="Яндекс Практикум">
       </a>
-
       <h1 class="header__title">Научиться учиться</h1>
-
 			<h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="" class="header__link">Узнать ⟶</a></h2>
-
       <div class="header__main-illustration"></div>
-
       <div class="header__square-pic rotation"></div>
     </header>
 
@@ -35,9 +31,7 @@
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-
 						<p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-
 						<p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </article>
@@ -71,7 +65,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-        <a href="" class="feynman__link">Подробнее &xrarr;</a>
+        <a href="#" class="feynman__link">Подробнее ⟶</a>
       </section>
 
 			<!--Цифры и факты-->
@@ -115,6 +109,21 @@
           </div>
         </div>
       </section>
+
+			<!--Салман Хан-->
+			<section class="khan">
+				<div class="khan__container">
+					<p class="khan__author">Салман Хан</p>
+					<h2 class="khan__title">Весь мир — школа</h2>
+					<blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
+					<p class="khan__quote-author">Джордж Лукас</p>
+					<p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+					<div class="khan__book-container">
+						<img src="./images/khan-book.jpg" alt="Обложка книги 'Весь мир — школа'" class="khan__book-pic">
+					<a href="https://www.ozon.ru/product/ves-mir-shkola-preobrazovannoe-obrazovanie-162999126/" class="khan__buy-link">Купить книгу ⟶</a>
+					</div>
+				</div>
+			</section>
 
 			<!--Принципы обучения-->
       <section class="kaufman">
@@ -163,7 +172,6 @@
           </div>
         </div>
         <div class="kaufman__triangle rotation"></div>
-
       </section>
 
 			<!--Ресурсы-->
@@ -183,7 +191,7 @@
 		<footer class="footer">
 			<div class="footer__columns">
 				<div class=" footer__column footer__column_content_copyright">
-					<img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип в подвале">
+					<img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Яндекс Практикум">
 					<p class="footer__author">&copy;2021.Игорь Теплостанский</p>
 				</div>
 				<nav class="footer__column footer__column_content_info">
