--- a/index.html
+++ b/index.html
@@ -37,6 +37,43 @@
         </article>
       </section>
 
+			<section class="techniques">
+				<h2 class="section-title">Техники обучения</h2>
+        <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+				<div class="cards">
+
+					<div class="cards__item">
+						<img src="./images/cards-attention.png" alt="Два вида внимания" class="cards__image">
+						<h4 class="cards__title">Два вида внимания</h4>
+						<p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+					</div>
+
+					<div class="cards__item">
+						<img src="./images/cards-recall.png" alt="Мальчик" class="cards__image">
+						<h4 class="cards__title">Recall</h4>
+						<p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+					</div>
+
+					<div class="cards__item">
+						<img src="./images/cards-interliving.png" alt="Интерливинг" class="cards__image">
+						<h4 class="cards__title">Интерливинг</h4>
+						<p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+					</div>
+
+					<div class="cards__item">
+						<img src="./images/cards-question.png" alt="Вопросы" class="cards__image">
+						<h4 class="cards__title">Вопросы</h4>
+						<p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+					</div>
+
+					<div class="cards__item">
+						<img src="./images/cards-competence.png" alt="Иллюзия компетентности" class="cards__image">
+						<h4 class="cards__title">Иллюзия компетентности</h4>
+						<p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+					</div>
+				</div>
+			</section>
+
 			<!--Видео-->
 			<section class="video">
 				<h2 class="section-title">Видео нa TED</h2>
