--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./vendor/normalize.css">
   <link rel="stylesheet" href="./page/index.css">
 </head>
 
@@ -19,7 +18,7 @@
       </a>
       <h1 class="header__title">Научиться учиться</h1>
 			<h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="" class="header__link">Узнать ⟶</a></h2>
-      <div class="header__main-illustration"></div>
+			<img src="./images/header-image.png" alt="Мальчик" class="header__main-illustration">
       <div class="header__square-pic rotation"></div>
     </header>
 
@@ -39,7 +38,7 @@
 
 			<section class="techniques">
 				<h2 class="section-title">Техники обучения</h2>
-        <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
 				<div class="cards">
 
 					<div class="cards__item">
@@ -79,12 +78,8 @@
 				<h2 class="section-title">Видео нa TED</h2>
         <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
 				<div class="video__iframes">
-					<div class="video__iframe">
-						<iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					</div>
-					<div class="video__iframe">
-						<iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					</div>
+					<iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 			</section>
 
@@ -216,10 +211,18 @@
 				<h2 class="section-title">Полезные ресурсы</h2>
 				<h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
 				<div class="resources__logo-zone">
-					<img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Арзамас">
-					<img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Н+1">
-					<img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Стрелка">
-					<img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Полка">
+					<a href="#">
+						<img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Арзамас">
+					</a>
+					<a href="#">
+						<img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Н+1">
+					</a>
+					<a href="#">
+						<img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Стрелка">
+					</a>
+					<a href="#">
+						<img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Полка">
+					</a>
 				</div>
 			</section>
 		</main>
