--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 			<div class="footer__columns">
 				<div class=" footer__column footer__column_content_copyright">
 					<img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Яндекс Практикум">
-					<p class="footer__author">&copy;2021.Игорь Теплостанский</p>
+					<p class="footer__author">&#127279;2021.Игорь Теплостанский</p>
 				</div>
 				<nav class="footer__column footer__column_content_info">
 					<h5 class="footer__column-heading">О Практикуме</h5>
